# azbykamebeli

./: .gitignore  README.md  analitics.pbix  docker-compose.yml  main.py  parse.py  product_data.json  pyproject.toml
data_base/: __init__.py
